--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,70 +7,98 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/arti"
-        android:layout_width="65dp"
-        android:layout_height="46dp"
-        android:onClick="arti"
-        android:text="+"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="141dp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="65dp"
-        android:layout_height="46dp"
-        android:onClick="eksi"
-        android:text="-"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="141dp" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="65dp"
-        android:layout_height="46dp"
-        android:onClick="carpi"
-        android:text="*"
-        tools:layout_editor_absoluteX="184dp"
-        tools:layout_editor_absoluteY="141dp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="65dp"
-        android:layout_height="46dp"
-        android:layout_marginEnd="36dp"
-        android:onClick="bolu"
-        android:text="-"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="141dp" />
-
+    <!-- İlk EditText -->
     <EditText
         android:id="@+id/editTextNumber"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="1. Sayı"
+        android:inputType="numberDecimal"
+        android:padding="12dp"
+        android:background="@android:drawable/edit_text"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- İkinci Sayı -->
     <EditText
         android:id="@+id/editTextNumber2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="2. Sayı"
+        android:inputType="numberDecimal"
+        android:padding="12dp"
+        android:background="@android:drawable/edit_text"
+        app:layout_constraintTop_toBottomOf="@id/editTextNumber"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
+    <!-- Butonlar Grubu -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="73dp" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="220dp" />
 
+    <LinearLayout
+        android:id="@+id/buttonGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/editTextNumber2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:weightSum="4">
+
+        <Button
+            android:id="@+id/arti"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="arti"
+            android:text="+"/>
+
+        <Button
+            android:id="@+id/eksi"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="eksi"
+            android:text="-"/>
+
+        <Button
+            android:id="@+id/carpi"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="carpi"
+            android:text="×"/>
+
+        <Button
+            android:id="@+id/bolu"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="bolu"
+            android:text="÷"/>
+    </LinearLayout>
+
+    <!-- Sonuç -->
     <TextView
         android:id="@+id/textView"
-        android:layout_width="181dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Sonuç: "
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/buttonGroup"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="220dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
