--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,15 @@
         android:background="@android:drawable/edit_text"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="Autofill,HardcodedText" />
 
     <!-- İkinci Sayı -->
     <EditText
         android:id="@+id/editTextNumber2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:hint="2. Sayı"
         android:inputType="numberDecimal"
         android:padding="12dp"
@@ -32,7 +34,8 @@
         app:layout_constraintTop_toBottomOf="@id/editTextNumber"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        tools:ignore="HardcodedText" />
 
     <!-- Butonlar Grubu -->
     <androidx.constraintlayout.widget.Guideline
@@ -61,7 +64,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="arti"
-            android:text="+"/>
+            android:text="+"
+            tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/eksi"
@@ -69,7 +73,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="eksi"
-            android:text="-"/>
+            android:text="-"
+            tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/carpi"
@@ -77,7 +82,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="carpi"
-            android:text="×"/>
+            android:text="×"
+            tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/bolu"
@@ -85,7 +91,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="bolu"
-            android:text="÷"/>
+            android:text="÷"
+            tools:ignore="ButtonStyle,HardcodedText" />
     </LinearLayout>
 
     <!-- Sonuç -->
@@ -99,6 +106,7 @@
         app:layout_constraintTop_toBottomOf="@id/buttonGroup"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        tools:ignore="HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
